# comfyui_nearsighted_attention

./: LICENSE  README.md  __init__.py  nearsighted_attention.py  pyproject.toml
.github/workflows/: publish.yml
